--- a/static/references/trinity_plugins/index.html
+++ b/static/references/trinity_plugins/index.html
@@ -95,6 +95,24 @@
 						<a href="modules/carrierplugin.html">Carrier<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="modules/cordovabatterystatusplugin.html">Cordova<wbr>Battery<wbr>Status<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="modules/cordovacameraplugin.html">Cordova<wbr>Camera<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="modules/cordovadevicemotionplugin.html">Cordova<wbr>Device<wbr>Motion<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="modules/cordovadeviceplugin.html">Cordova<wbr>Device<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="modules/cordovamediacaptureplugin.html">Cordova<wbr>Media<wbr>Capture<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="modules/cordovanetworkinfoplugin.html">Cordova<wbr>Network<wbr>Info<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="modules/didplugin.html">DIDPlugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
@@ -110,50 +128,8 @@
 					<li class=" tsd-kind-enum tsd-is-not-exported">
 						<a href="enums/localfilesystem.html" class="tsd-kind-icon">Local<wbr>File<wbr>System</a>
 					</li>
-					<li class=" tsd-kind-class tsd-is-not-exported">
-						<a href="classes/camerapopoveroptions.html" class="tsd-kind-icon">Camera<wbr>Popover<wbr>Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/acceleration.html" class="tsd-kind-icon">Acceleration</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/accelerometer.html" class="tsd-kind-icon">Accelerometer</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/accelerometeroptions.html" class="tsd-kind-icon">Accelerometer<wbr>Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/audiooptions.html" class="tsd-kind-icon">Audio<wbr>Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/batterystatusevent.html" class="tsd-kind-icon">Battery<wbr>Status<wbr>Event</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/camera.html" class="tsd-kind-icon">Camera</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/cameraoptions.html" class="tsd-kind-icon">Camera<wbr>Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/camerapopoverhandle.html" class="tsd-kind-icon">Camera<wbr>Popover<wbr>Handle</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/capture.html" class="tsd-kind-icon">Capture</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/captureerror.html" class="tsd-kind-icon">Capture<wbr>Error</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/configurationdata.html" class="tsd-kind-icon">Configuration<wbr>Data</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/connection.html" class="tsd-kind-icon">Connection</a>
-					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/cordova.html" class="tsd-kind-icon">Cordova</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/device.html" class="tsd-kind-icon">Device</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/directoryentry.html" class="tsd-kind-icon">Directory<wbr>Entry</a>
@@ -186,19 +162,10 @@
 						<a href="interfaces/flags.html" class="tsd-kind-icon">Flags</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/imageoptions.html" class="tsd-kind-icon">Image<wbr>Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/iosplayoptions.html" class="tsd-kind-icon">Ios<wbr>Play<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/media.html" class="tsd-kind-icon">Media</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/mediafile.html" class="tsd-kind-icon">Media<wbr>File</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/mediafiledata.html" class="tsd-kind-icon">Media<wbr>File<wbr>Data</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/metadata.html" class="tsd-kind-icon">Metadata</a>
@@ -216,25 +183,7 @@
 						<a href="interfaces/statusbar.html" class="tsd-kind-icon">Status<wbr>Bar</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/videooptions.html" class="tsd-kind-icon">Video<wbr>Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/watchhandle.html" class="tsd-kind-icon">Watch<wbr>Handle</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/window.html" class="tsd-kind-icon">Window</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-is-not-exported">
-						<a href="globals.html#batteryevent" class="tsd-kind-icon">battery<wbr>Event</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-not-exported">
-						<a href="globals.html#camera" class="tsd-kind-icon">Camera</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-not-exported">
-						<a href="globals.html#captureerror" class="tsd-kind-icon">Capture<wbr>Error</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-not-exported">
-						<a href="globals.html#connection" class="tsd-kind-icon">Connection</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-not-exported">
 						<a href="globals.html#fileerror" class="tsd-kind-icon">File<wbr>Error</a>
