--- a/static/references/trinity_plugins/interfaces/batterystatusevent.html
+++ b/static/references/trinity_plugins/interfaces/batterystatusevent.html
@@ -127,9 +127,6 @@
 					<div class="tsd-signature tsd-kind-icon">AT_<wbr>TARGET<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.AT_TARGET</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5445</li>
-						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-not-exported">
@@ -138,9 +135,6 @@
 					<div class="tsd-signature tsd-kind-icon">BUBBLING_<wbr>PHASE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.BUBBLING_PHASE</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5446</li>
-						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-not-exported">
@@ -149,9 +143,6 @@
 					<div class="tsd-signature tsd-kind-icon">CAPTURING_<wbr>PHASE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.CAPTURING_PHASE</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5447</li>
-						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
@@ -159,9 +150,6 @@
 					<h3>Event</h3>
 					<div class="tsd-signature tsd-kind-icon">Event<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5451</li>
-						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
 						<h4>Type declaration</h4>
@@ -174,9 +162,6 @@
 								<ul class="tsd-descriptions">
 									<li class="tsd-description">
 										<aside class="tsd-sources">
-											<ul>
-												<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5452</li>
-											</ul>
 										</aside>
 										<h4 class="tsd-parameters-title">Parameters</h4>
 										<ul class="tsd-parameters">
@@ -214,9 +199,6 @@
 					<div class="tsd-signature tsd-kind-icon">NONE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.NONE</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5448</li>
-						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-not-exported">
@@ -225,9 +207,6 @@
 					<div class="tsd-signature tsd-kind-icon">bubbles<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.bubbles</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5387</li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -241,9 +220,6 @@
 					<div class="tsd-signature tsd-kind-icon">cancel<wbr>Bubble<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.cancelBubble</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5388</li>
-						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-not-exported">
@@ -252,9 +228,6 @@
 					<div class="tsd-signature tsd-kind-icon">cancelable<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.cancelable</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5392</li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -268,9 +241,6 @@
 					<div class="tsd-signature tsd-kind-icon">composed<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.composed</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5396</li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -284,9 +254,6 @@
 					<div class="tsd-signature tsd-kind-icon">current<wbr>Target<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">EventTarget</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.currentTarget</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5400</li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -300,9 +267,6 @@
 					<div class="tsd-signature tsd-kind-icon">default<wbr>Prevented<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.defaultPrevented</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5404</li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -316,9 +280,6 @@
 					<div class="tsd-signature tsd-kind-icon">event<wbr>Phase<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.eventPhase</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5408</li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -331,9 +292,6 @@
 					<h3>is<wbr>Plugged</h3>
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Plugged<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-battery-status.d.ts#L45">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-battery-status.d.ts:45</a></li>
-						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-not-exported">
@@ -342,9 +300,6 @@
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Trusted<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.isTrusted</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5412</li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -357,9 +312,6 @@
 					<h3>level</h3>
 					<div class="tsd-signature tsd-kind-icon">level<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-battery-status.d.ts#L43">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-battery-status.d.ts:43</a></li>
-						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-not-exported">
@@ -368,9 +320,6 @@
 					<div class="tsd-signature tsd-kind-icon">return<wbr>Value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.returnValue</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5413</li>
-						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-not-exported">
@@ -379,9 +328,6 @@
 					<div class="tsd-signature tsd-kind-icon">src<wbr>Element<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">EventTarget</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.srcElement</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5415</li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<dl class="tsd-comment-tags">
@@ -396,9 +342,6 @@
 					<div class="tsd-signature tsd-kind-icon">target<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">EventTarget</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.target</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5419</li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -412,9 +355,6 @@
 					<div class="tsd-signature tsd-kind-icon">time<wbr>Stamp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.timeStamp</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5423</li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -428,9 +368,6 @@
 					<div class="tsd-signature tsd-kind-icon">type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from Event.type</p>
-						<ul>
-							<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5427</li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -451,9 +388,6 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from Event.composedPath</p>
-								<ul>
-									<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5431</li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -474,9 +408,6 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from Event.initEvent</p>
-								<ul>
-									<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5432</li>
-								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -504,9 +435,6 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from Event.preventDefault</p>
-								<ul>
-									<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5436</li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -527,9 +455,6 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from Event.stopImmediatePropagation</p>
-								<ul>
-									<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5440</li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -550,9 +475,6 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from Event.stopPropagation</p>
-								<ul>
-									<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5444</li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -575,6 +497,9 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum tsd-is-not-exported">
+						<a href="../enums/localfilesystem.html" class="tsd-kind-icon">Local<wbr>File<wbr>System</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-not-exported">
@@ -659,6 +584,90 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="connection.html" class="tsd-kind-icon">Connection</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="cordova.html" class="tsd-kind-icon">Cordova</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="device.html" class="tsd-kind-icon">Device</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="directoryentry.html" class="tsd-kind-icon">Directory<wbr>Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="directoryreader.html" class="tsd-kind-icon">Directory<wbr>Reader</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="document.html" class="tsd-kind-icon">Document</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="entry.html" class="tsd-kind-icon">Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="fileentry.html" class="tsd-kind-icon">File<wbr>Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="fileerror.html" class="tsd-kind-icon">File<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filesaver.html" class="tsd-kind-icon">File<wbr>Saver</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filewriter.html" class="tsd-kind-icon">File<wbr>Writer</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="flags.html" class="tsd-kind-icon">Flags</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="iosplayoptions.html" class="tsd-kind-icon">Ios<wbr>Play<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="media.html" class="tsd-kind-icon">Media</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="metadata.html" class="tsd-kind-icon">Metadata</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="navigator.html" class="tsd-kind-icon">Navigator</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="notification.html" class="tsd-kind-icon">Notification</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="notificationpromptresult.html" class="tsd-kind-icon">Notification<wbr>Prompt<wbr>Result</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="statusbar.html" class="tsd-kind-icon">Status<wbr>Bar</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="window.html" class="tsd-kind-icon">Window</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-not-exported">
+						<a href="../globals.html#batteryevent" class="tsd-kind-icon">battery<wbr>Event</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#connection" class="tsd-kind-icon">Connection</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#fileerror" class="tsd-kind-icon">File<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#filewriter" class="tsd-kind-icon">File<wbr>Writer</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#media" class="tsd-kind-icon">Media</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#statusbar" class="tsd-kind-icon">Status<wbr>Bar</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#device" class="tsd-kind-icon">device</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
