--- a/static/references/trinity_plugins/interfaces/filewriter.html
+++ b/static/references/trinity_plugins/interfaces/filewriter.html
@@ -127,9 +127,6 @@
 					<div class="tsd-signature tsd-kind-icon">error<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Error</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="filesaver.html">FileSaver</a>.<a href="filesaver.html#error">error</a></p>
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L277">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:277</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -142,9 +139,6 @@
 					<h3>length</h3>
 					<div class="tsd-signature tsd-kind-icon">length<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L294">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:294</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -159,9 +153,6 @@
 					<div class="tsd-signature tsd-kind-icon">onabort<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="filesaver.html">FileSaver</a>.<a href="filesaver.html#onabort">onabort</a></p>
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L271">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:271</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -196,9 +187,6 @@
 					<div class="tsd-signature tsd-kind-icon">onerror<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="filesaver.html">FileSaver</a>.<a href="filesaver.html#onerror">onerror</a></p>
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L273">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:273</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -233,9 +221,6 @@
 					<div class="tsd-signature tsd-kind-icon">onprogress<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="filesaver.html">FileSaver</a>.<a href="filesaver.html#onprogress">onprogress</a></p>
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L267">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:267</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -270,9 +255,6 @@
 					<div class="tsd-signature tsd-kind-icon">onwrite<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="filesaver.html">FileSaver</a>.<a href="filesaver.html#onwrite">onwrite</a></p>
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L269">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:269</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -307,9 +289,6 @@
 					<div class="tsd-signature tsd-kind-icon">onwriteend<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="filesaver.html">FileSaver</a>.<a href="filesaver.html#onwriteend">onwriteend</a></p>
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L275">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:275</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -344,9 +323,6 @@
 					<div class="tsd-signature tsd-kind-icon">onwritestart<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="filesaver.html">FileSaver</a>.<a href="filesaver.html#onwritestart">onwritestart</a></p>
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L265">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:265</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -380,9 +356,6 @@
 					<h3>position</h3>
 					<div class="tsd-signature tsd-kind-icon">position<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L289">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:289</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -397,9 +370,6 @@
 					<div class="tsd-signature tsd-kind-icon">ready<wbr>State<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="filesaver.html">FileSaver</a>.<a href="filesaver.html#readystate">readyState</a></p>
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L263">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:263</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -424,9 +394,6 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="filesaver.html">FileSaver</a>.<a href="filesaver.html#abort">abort</a></p>
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L255">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:255</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -447,9 +414,6 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from EventTarget.addEventListener</p>
-								<ul>
-									<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5522</li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -487,9 +451,6 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from EventTarget.dispatchEvent</p>
-								<ul>
-									<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5526</li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -516,9 +477,6 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from EventTarget.removeEventListener</p>
-								<ul>
-									<li>Defined in usr/local/lib/node_modules/typedoc/node_modules/typescript/lib/lib.dom.d.ts:5530</li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -550,9 +508,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L305">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:305</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -582,9 +537,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L311">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:311</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -614,9 +566,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-file.d.ts#L299">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-file.d.ts:299</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -648,6 +597,36 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum tsd-is-not-exported">
+						<a href="../enums/localfilesystem.html" class="tsd-kind-icon">Local<wbr>File<wbr>System</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="cordova.html" class="tsd-kind-icon">Cordova</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="directoryentry.html" class="tsd-kind-icon">Directory<wbr>Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="directoryreader.html" class="tsd-kind-icon">Directory<wbr>Reader</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="document.html" class="tsd-kind-icon">Document</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="entry.html" class="tsd-kind-icon">Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="fileentry.html" class="tsd-kind-icon">File<wbr>Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="fileerror.html" class="tsd-kind-icon">File<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filesaver.html" class="tsd-kind-icon">File<wbr>Saver</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-not-exported">
@@ -708,6 +687,48 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="flags.html" class="tsd-kind-icon">Flags</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="iosplayoptions.html" class="tsd-kind-icon">Ios<wbr>Play<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="media.html" class="tsd-kind-icon">Media</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="metadata.html" class="tsd-kind-icon">Metadata</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="navigator.html" class="tsd-kind-icon">Navigator</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="notification.html" class="tsd-kind-icon">Notification</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="notificationpromptresult.html" class="tsd-kind-icon">Notification<wbr>Prompt<wbr>Result</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="statusbar.html" class="tsd-kind-icon">Status<wbr>Bar</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="window.html" class="tsd-kind-icon">Window</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#fileerror" class="tsd-kind-icon">File<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#filewriter" class="tsd-kind-icon">File<wbr>Writer</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#media" class="tsd-kind-icon">Media</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#statusbar" class="tsd-kind-icon">Status<wbr>Bar</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#device" class="tsd-kind-icon">device</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
