--- a/static/references/trinity_plugins/interfaces/connection.html
+++ b/static/references/trinity_plugins/interfaces/connection.html
@@ -107,9 +107,6 @@
 					<h3>type</h3>
 					<div class="tsd-signature tsd-kind-icon">type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-network-information.d.ts#L48">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-network-information.d.ts:48</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -138,9 +135,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-network-information.d.ts#L49">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-network-information.d.ts:49</a></li>
-								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -167,9 +161,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-network-information.d.ts#L50">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-network-information.d.ts:50</a></li>
-								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -199,6 +190,12 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum tsd-is-not-exported">
+						<a href="../enums/localfilesystem.html" class="tsd-kind-icon">Local<wbr>File<wbr>System</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="batterystatusevent.html" class="tsd-kind-icon">Battery<wbr>Status<wbr>Event</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-not-exported">
@@ -217,6 +214,87 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="cordova.html" class="tsd-kind-icon">Cordova</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="device.html" class="tsd-kind-icon">Device</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="directoryentry.html" class="tsd-kind-icon">Directory<wbr>Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="directoryreader.html" class="tsd-kind-icon">Directory<wbr>Reader</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="document.html" class="tsd-kind-icon">Document</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="entry.html" class="tsd-kind-icon">Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="fileentry.html" class="tsd-kind-icon">File<wbr>Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="fileerror.html" class="tsd-kind-icon">File<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filesaver.html" class="tsd-kind-icon">File<wbr>Saver</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filewriter.html" class="tsd-kind-icon">File<wbr>Writer</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="flags.html" class="tsd-kind-icon">Flags</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="iosplayoptions.html" class="tsd-kind-icon">Ios<wbr>Play<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="media.html" class="tsd-kind-icon">Media</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="metadata.html" class="tsd-kind-icon">Metadata</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="navigator.html" class="tsd-kind-icon">Navigator</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="notification.html" class="tsd-kind-icon">Notification</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="notificationpromptresult.html" class="tsd-kind-icon">Notification<wbr>Prompt<wbr>Result</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="statusbar.html" class="tsd-kind-icon">Status<wbr>Bar</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="window.html" class="tsd-kind-icon">Window</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-not-exported">
+						<a href="../globals.html#batteryevent" class="tsd-kind-icon">battery<wbr>Event</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#connection" class="tsd-kind-icon">Connection</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#fileerror" class="tsd-kind-icon">File<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#filewriter" class="tsd-kind-icon">File<wbr>Writer</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#media" class="tsd-kind-icon">Media</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#statusbar" class="tsd-kind-icon">Status<wbr>Bar</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#device" class="tsd-kind-icon">device</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
