--- a/static/references/trinity_plugins/interfaces/hiveplugin.ipfsclientcreationoptions.html
+++ b/static/references/trinity_plugins/interfaces/hiveplugin.ipfsclientcreationoptions.html
@@ -111,9 +111,6 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="../classes/hiveplugin.clientcreationoptions.html">ClientCreationOptions</a>.<a href="../classes/hiveplugin.clientcreationoptions.html#constructor">constructor</a></p>
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/hive.d.ts#L369">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/hive.d.ts:369</a></li>
-								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="hiveplugin.ipfsclientcreationoptions.html" class="tsd-signature-type">IPFSClientCreationOptions</a></h4>
 						</li>
@@ -128,9 +125,6 @@
 					<div class="tsd-signature tsd-kind-icon">drive<wbr>Type<span class="tsd-signature-symbol">:</span> <a href="../enums/hiveplugin.drivetype.html" class="tsd-signature-type">DriveType</a></div>
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/hiveplugin.clientcreationoptions.html">ClientCreationOptions</a>.<a href="../classes/hiveplugin.clientcreationoptions.html#drivetype">driveType</a></p>
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/hive.d.ts#L369">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/hive.d.ts:369</a></li>
-						</ul>
 					</aside>
 				</section>
 			</section>
@@ -146,6 +140,24 @@
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/carrierplugin.html">Carrier<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/cordovabatterystatusplugin.html">Cordova<wbr>Battery<wbr>Status<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/cordovacameraplugin.html">Cordova<wbr>Camera<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/cordovadevicemotionplugin.html">Cordova<wbr>Device<wbr>Motion<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/cordovadeviceplugin.html">Cordova<wbr>Device<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/cordovamediacaptureplugin.html">Cordova<wbr>Media<wbr>Capture<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/cordovanetworkinfoplugin.html">Cordova<wbr>Network<wbr>Info<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/didplugin.html">DIDPlugin</a>
