--- a/static/references/trinity_plugins/interfaces/navigator.html
+++ b/static/references/trinity_plugins/interfaces/navigator.html
@@ -102,28 +102,15 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
 					<a name="accelerometer" class="tsd-anchor"></a>
 					<h3>accelerometer</h3>
-					<div class="tsd-signature tsd-kind-icon">accelerometer<span class="tsd-signature-symbol">:</span> <a href="accelerometer.html" class="tsd-signature-type">Accelerometer</a></div>
+					<div class="tsd-signature tsd-kind-icon">accelerometer<span class="tsd-signature-symbol">:</span> <a href="cordovadevicemotionplugin.accelerometer.html" class="tsd-signature-type">Accelerometer</a></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-device-motion.d.ts#L15">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-device-motion.d.ts:15</a></li>
-						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>This plugin provides access to the device&#39;s accelerometer. The accelerometer is a motion sensor
-								that detects the change (delta) in movement relative to the current device orientation,
-							in three dimensions along the x, y, and z axis.</p>
-						</div>
-					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
 					<a name="camera" class="tsd-anchor"></a>
 					<h3>camera</h3>
-					<div class="tsd-signature tsd-kind-icon">camera<span class="tsd-signature-symbol">:</span> <a href="camera.html" class="tsd-signature-type">Camera</a></div>
+					<div class="tsd-signature tsd-kind-icon">camera<span class="tsd-signature-symbol">:</span> <a href="cordovacameraplugin.camera.html" class="tsd-signature-type">Camera</a></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-camera.d.ts#L13">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-camera.d.ts:13</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -134,27 +121,15 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
 					<a name="connection" class="tsd-anchor"></a>
 					<h3>connection</h3>
-					<div class="tsd-signature tsd-kind-icon">connection<span class="tsd-signature-symbol">:</span> <a href="connection.html" class="tsd-signature-type">Connection</a></div>
+					<div class="tsd-signature tsd-kind-icon">connection<span class="tsd-signature-symbol">:</span> <a href="cordovanetworkinfoplugin.connection.html" class="tsd-signature-type">Connection</a></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-network-information.d.ts#L14">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-network-information.d.ts:14</a></li>
-						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>This plugin provides an implementation of an old version of the Network Information API.
-							It provides information about the device&#39;s cellular and wifi connection, and whether the device has an internet connection.</p>
-						</div>
-					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
 					<a name="device" class="tsd-anchor"></a>
 					<h3>device</h3>
-					<div class="tsd-signature tsd-kind-icon">device<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Device</span></div>
+					<div class="tsd-signature tsd-kind-icon">device<span class="tsd-signature-symbol">:</span> <a href="cordovamediacaptureplugin.device.html" class="tsd-signature-type">Device</a></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-media-capture.d.ts#L10">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-media-capture.d.ts:10</a></li>
-						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
@@ -162,21 +137,12 @@
 					<h3>network</h3>
 					<div class="tsd-signature tsd-kind-icon">network<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-network-information.d.ts#L17">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-network-information.d.ts:17</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
 						<h4>Type declaration</h4>
 						<ul class="tsd-parameters">
 							<li class="tsd-parameter">
-								<h5>connection<span class="tsd-signature-symbol">: </span><a href="connection.html" class="tsd-signature-type">Connection</a></h5>
-								<div class="tsd-comment tsd-typography">
-									<div class="lead">
-										<p>This plugin provides an implementation of an old version of the Network Information API.
-										It provides information about the device&#39;s cellular and wifi connection, and whether the device has an internet connection.</p>
-									</div>
-								</div>
+								<h5>connection<span class="tsd-signature-symbol">: </span><a href="cordovanetworkinfoplugin.connection.html" class="tsd-signature-type">Connection</a></h5>
 							</li>
 						</ul>
 					</div>
@@ -186,9 +152,6 @@
 					<h3>notification</h3>
 					<div class="tsd-signature tsd-kind-icon">notification<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Notification</span></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-dialogs.d.ts#L11">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-dialogs.d.ts:11</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -201,9 +164,6 @@
 					<h3>splashscreen</h3>
 					<div class="tsd-signature tsd-kind-icon">splashscreen<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-splashscreen.d.ts#L11">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-splashscreen.d.ts:11</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -221,9 +181,6 @@
 								<ul class="tsd-descriptions">
 									<li class="tsd-description">
 										<aside class="tsd-sources">
-											<ul>
-												<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-splashscreen.d.ts#L13">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-splashscreen.d.ts:13</a></li>
-											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
 											<div class="lead">
@@ -241,9 +198,6 @@
 								<ul class="tsd-descriptions">
 									<li class="tsd-description">
 										<aside class="tsd-sources">
-											<ul>
-												<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-splashscreen.d.ts#L15">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-splashscreen.d.ts:15</a></li>
-											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
 											<div class="lead">
@@ -269,9 +223,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-vibration.d.ts#L14">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-vibration.d.ts:14</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -291,9 +242,6 @@
 						</li>
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-vibration.d.ts#L21">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-vibration.d.ts:21</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -325,6 +273,51 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum tsd-is-not-exported">
+						<a href="../enums/localfilesystem.html" class="tsd-kind-icon">Local<wbr>File<wbr>System</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="cordova.html" class="tsd-kind-icon">Cordova</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="directoryentry.html" class="tsd-kind-icon">Directory<wbr>Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="directoryreader.html" class="tsd-kind-icon">Directory<wbr>Reader</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="document.html" class="tsd-kind-icon">Document</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="entry.html" class="tsd-kind-icon">Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="fileentry.html" class="tsd-kind-icon">File<wbr>Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="fileerror.html" class="tsd-kind-icon">File<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filesaver.html" class="tsd-kind-icon">File<wbr>Saver</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filewriter.html" class="tsd-kind-icon">File<wbr>Writer</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="flags.html" class="tsd-kind-icon">Flags</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="iosplayoptions.html" class="tsd-kind-icon">Ios<wbr>Play<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="media.html" class="tsd-kind-icon">Media</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="metadata.html" class="tsd-kind-icon">Metadata</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-not-exported">
@@ -358,6 +351,33 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="notification.html" class="tsd-kind-icon">Notification</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="notificationpromptresult.html" class="tsd-kind-icon">Notification<wbr>Prompt<wbr>Result</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="statusbar.html" class="tsd-kind-icon">Status<wbr>Bar</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="window.html" class="tsd-kind-icon">Window</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#fileerror" class="tsd-kind-icon">File<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#filewriter" class="tsd-kind-icon">File<wbr>Writer</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#media" class="tsd-kind-icon">Media</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#statusbar" class="tsd-kind-icon">Status<wbr>Bar</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#device" class="tsd-kind-icon">device</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
