--- a/static/references/trinity_plugins/interfaces/statusbar.html
+++ b/static/references/trinity_plugins/interfaces/statusbar.html
@@ -113,9 +113,6 @@
 					<h3>is<wbr>Visible</h3>
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Visible<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-statusbar.d.ts#L78">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-statusbar.d.ts:78</a></li>
-						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
@@ -135,9 +132,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-statusbar.d.ts#L63">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-statusbar.d.ts:63</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -168,9 +162,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-statusbar.d.ts#L54">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-statusbar.d.ts:54</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -201,9 +192,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-statusbar.d.ts#L68">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-statusbar.d.ts:68</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -223,9 +211,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-statusbar.d.ts#L25">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-statusbar.d.ts:25</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -255,9 +240,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-statusbar.d.ts#L73">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-statusbar.d.ts:73</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -277,9 +259,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-statusbar.d.ts#L45">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-statusbar.d.ts:45</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -299,9 +278,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-statusbar.d.ts#L40">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-statusbar.d.ts:40</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -321,9 +297,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-statusbar.d.ts#L30">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-statusbar.d.ts:30</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -343,9 +316,6 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/elastos/Elastos.Trinity.ToolChains/blob/9545321/typings/dist/cordova-plugin-statusbar.d.ts#L35">Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/ToolChains/typings/dist/cordova-plugin-statusbar.d.ts:35</a></li>
-								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
@@ -368,6 +338,60 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum tsd-is-not-exported">
+						<a href="../enums/localfilesystem.html" class="tsd-kind-icon">Local<wbr>File<wbr>System</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="cordova.html" class="tsd-kind-icon">Cordova</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="directoryentry.html" class="tsd-kind-icon">Directory<wbr>Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="directoryreader.html" class="tsd-kind-icon">Directory<wbr>Reader</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="document.html" class="tsd-kind-icon">Document</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="entry.html" class="tsd-kind-icon">Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="fileentry.html" class="tsd-kind-icon">File<wbr>Entry</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="fileerror.html" class="tsd-kind-icon">File<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filesaver.html" class="tsd-kind-icon">File<wbr>Saver</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="filewriter.html" class="tsd-kind-icon">File<wbr>Writer</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="flags.html" class="tsd-kind-icon">Flags</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="iosplayoptions.html" class="tsd-kind-icon">Ios<wbr>Play<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="media.html" class="tsd-kind-icon">Media</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="metadata.html" class="tsd-kind-icon">Metadata</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="navigator.html" class="tsd-kind-icon">Navigator</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="notification.html" class="tsd-kind-icon">Notification</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="notificationpromptresult.html" class="tsd-kind-icon">Notification<wbr>Prompt<wbr>Result</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-not-exported">
@@ -407,6 +431,24 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="window.html" class="tsd-kind-icon">Window</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#fileerror" class="tsd-kind-icon">File<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#filewriter" class="tsd-kind-icon">File<wbr>Writer</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#media" class="tsd-kind-icon">Media</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#statusbar" class="tsd-kind-icon">Status<wbr>Bar</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#device" class="tsd-kind-icon">device</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
